--- a/src/main/resources/com/example/oop9/hello-view.fxml
+++ b/src/main/resources/com/example/oop9/hello-view.fxml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.oop9.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<BorderPane prefHeight="402.0" prefWidth="464.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.oop9.HelloController">
+   <top>
+       <VBox prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+           <MenuBar>
+               <Menu mnemonicParsing="false" text="File">
+                   <MenuItem mnemonicParsing="false" text="Close" />
+               </Menu>
+               <Menu mnemonicParsing="false" text="Edit">
+                   <MenuItem mnemonicParsing="false" text="Delete" />
+               </Menu>
+               <Menu mnemonicParsing="false" text="Help">
+                   <MenuItem mnemonicParsing="false" text="About" />
+               </Menu>
+           </MenuBar>
+           <ToolBar prefHeight="40.0" prefWidth="200.0">
+               <TextField fx:id="startField" prefHeight="26.0" prefWidth="94.0" />
+               <TextField fx:id="finishField" prefHeight="26.0" prefWidth="96.0" />
+               <TextField fx:id="stepField" prefHeight="26.0" prefWidth="96.0" />
+            <Button mnemonicParsing="false" onAction="#makeResults" text="Вивести результат" />
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+           </ToolBar>
+       </VBox>
+   </top>
+   <center>
+      <Pane prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label fx:id="resultLabel" layoutX="73.0" layoutY="31.0" prefHeight="128.0" prefWidth="172.0" text="" />
+         </children></Pane>
+   </center>
+
+
+
+
+</BorderPane>
